# job_finder

./: .env.sample  .gitignore  README.md  docker-compose.yml  load_env.fish  load_env.sh  manage.py  pyproject.toml
docs/: index.md  sources_automation_samples.sql
job_finder/: celery.py  settings.py  urls.py
jobs/: admin.py  integrations.py  models.py  sanitizer.py  services.py  tasks.py
jobs/analyzers/: openai.py
jobs/migrations/: 0001_initial.py  0002_jobdescription_is_sanitized.py
tests/: conftest.py  test_integrations.py  test_sanitizer.py
tests/analyzers/: test_openai.py
