[project]
name = "job-finder"
version = "0.1.0"
description = "Find jobs and analyze job descriptions using AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery (>=5.4.0,<6.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "openai (>=1.60.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pygithub (>=2.5.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "spacy (>=3.8.4,<4.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "__pycache__"]
fix = true

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
case-sensitive = false

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
flower = "^2.0.1"
pytest-mock = "^3.14.0"
django-stubs = "^5.1.2"
mypy = "^1.14.1"

[tool.django-stubs]
django_settings_module = "job_finder.settings"